# Vision-X

./: .gitignore  README.md  app.py  app_dearpygui.py  check_cuda.py  dashboard.py  prepare_data.py  pyproject.toml  requirements.txt  run_visionx.py  visionxApp.py  visionxApp.spec
resources/: labels.pkl
scripts/: build_index.py  run_visionx.py
src/visionx/: build_index.py  data_utils.py  database.py  inference.py  prepare_data.py  run_visionx.py
